--- a/WezenSchedule/html/basestyle.css
+++ b/WezenSchedule/html/basestyle.css
@@ -19,8 +19,6 @@ button {
     cursor: pointer;
 }
 
-
-
 nav {
   padding: 10px;
   background: #ccc;
@@ -90,4 +88,29 @@ form{
 
 form.adminform{
   visibility: hidden;
+}
+
+li.schedules{
+  padding-right: 20px;
+}
+.login {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: white; /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+/* login window */
+.login-content {
+    background-color: white;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
 }
